# yolo_world_ros2

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  requirements.txt
src/yolo_world_interfaces/yolo_world_msgs/: CMakeLists.txt  package.xml
src/yolo_world_interfaces/yolo_world_msgs/msg/: BbPixelPose.msg  BbPixelPoseArray.msg  ObjectImage.msg  ObjectImageArray.msg  ObjectPose.msg  ObjectPoseArray.msg  PixelPose.msg
src/yolo_world_interfaces/yolo_world_srvs/: CMakeLists.txt  package.xml
src/yolo_world_interfaces/yolo_world_srvs/srvs/: SetClasses.srv  SetPredict.srv
src/yolo_world_ros2/: package.xml  setup.cfg  setup.py
src/yolo_world_ros2/launch/: bringup_yolo_world.launch.py
src/yolo_world_ros2/yolo_world_ros2/: yolo_world_ros2_main.py
yolo_world_interfaces/: CMakeLists.txt  package.xml
yolo_world_interfaces/msg/: PoseStampedArray.msg  RoiPose.msg  RoiPoseArray.msg
yolo_world_interfaces/srv/: SetClasses.srv
yolo_world_ros2/: CMakeLists.txt  package.xml  setup.py
yolo_world_ros2/launch/: yolo_world_ros2_launch.py
yolo_world_ros2/yolo_world_ros2/: pose_transformer.py  yolo_world_ros2.py  yolo_world_ros2_main.py
yolo_world_ros2_api/: package.xml  setup.cfg  setup.py
yolo_world_ros2_api/sample/: sample.py
yolo_world_ros2_api/yolo_world_ros2_api/: yolo_world_ros2.py
